--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,9 @@
   top:0;
   left:0;
   right:0;
-  margin-top:80px;
-  margin-bottom:80px;
-  margin-right:40px;
-  margin-left:40px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 #background {
